--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "@tanstack/react-table": "^8.9.1",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
-    "lucide-react": "0.105.0-alpha.4",
+    "lucide-react": "^0.105.0-alpha.4",
     "next": "^13.4.4",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
-    "tailwind-merge": "^1.12.0",
+    "tailwind-merge": "^1.13.0",
     "tailwindcss-animate": "^1.0.5"
   },
   "devDependencies": {
