--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.9.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "lucide-react": "^0.105.0-alpha.4",
     "next": "^13.4.4",
     "next-themes": "^0.2.1",
@@ -32,7 +35,7 @@
     "@types/node": "^17.0.45",
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/parser": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.9",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.41.0",
     "eslint-config-next": "13.0.0",
