--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+#google auth
+secret.json
+
 # dependencies
 node_modules
 .pnp
@@ -7,6 +10,7 @@ node_modules
 
 # testing
 coverage
+mockDB/
 
 # next.js
 .next/
