--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
 		"plugin:@typescript-eslint/recommended",
 		"plugin:@typescript-eslint/recommended-requiring-type-checking"
 	],
-	"plugins": ["tailwindcss", "typescript-eslint"],
+	"plugins": ["tailwindcss", "@typescript-eslint"],
 	"rules": {
 		"@next/next/no-html-link-for-pages": "off",
 		"react/jsx-key": "off",
