--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^13.4.5",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^4.29.12",
+    "@tanstack/react-query-devtools": "^4.29.12",
     "@tanstack/react-table": "^8.9.1",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
     "axios": "^1.4.0",
-    "class-variance-authority": "^0.4.0",
+    "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "googleapis": "^118.0.0",
     "lucide-react": "^0.105.0-alpha.4",
-    "next": "^13.4.4",
+    "next": "^13.4.5",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -42,13 +44,13 @@
     "@typescript-eslint/parser": "^5.59.9",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.41.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "^13.4.5",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.12.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.5"
+    "typescript": "^5.1.3"
   }
 }
