--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,14 @@
 		],
 		"strictNullChecks": false
 	},
-	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx",
+		".next/types/**/*.ts",
+		"app/page.jsx",
+		"app/teams/page.jsx",
+		"app/players/page.jsx"
+	],
 	"exclude": ["node_modules"]
 }
