--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
 		"**/*.ts",
 		"**/*.tsx",
 		".next/types/**/*.ts",
-		"app/page.jsx",
+		"app/page.tsx",
 		"app/teams/page.jsx",
 		"app/players/page.jsx"
 	],
