--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"noImplicitAny": false,
 		"strict": false,
 		"forceConsistentCasingInFileNames": true,
-		"noEmit": false,
+		"noEmit": true,
 		"incremental": true,
 		"esModuleInterop": true,
 		"module": "esnext",
