Trying different config to make it work

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
 	"overrides": [
 		{
 			"files": ["*.js", "*.jsx"],
+			// "parser": "babel-eslint",
 			"rules": {
 				"@typescript-eslint/*": "off"
 			}
