--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
 		"noImplicitAny": false,
 		"strict": false,
 		"forceConsistentCasingInFileNames": true,
-		"noEmit": true,
+		"noEmit": false,
 		"incremental": true,
 		"esModuleInterop": true,
 		"module": "esnext",
@@ -28,6 +28,7 @@
 			}
 		],
 		"strictNullChecks": false
+		// "outDir": "dist"
 	},
 	"include": [
 		"next-env.d.ts",
